<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linkguard_tor_section"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/tor_pref_js"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tor_pref_js" />

        <Switch
            android:id="@+id/tor_pref_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tor_pref_images" />

        <Switch
            android:id="@+id/tor_pref_downloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tor_pref_downloads" />

        <Switch
            android:id="@+id/tor_pref_auto_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tor_pref_auto_clear" />

        <TextView
            android:id="@+id/tor_pref_timeout_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/tor_pref_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:text="@string/linkguard_routing_section"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domain_routing_default_label" />

        <Spinner
            android:id="@+id/domain_default_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/domain_routing_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domain_routing_edit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:text="@string/linkguard_history_section"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/recent_links_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_links_enabled" />

        <TextView
            android:id="@+id/recent_links_retention_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/recent_links_retention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="30" />

        <Button
            android:id="@+id/open_recent_links"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_links_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:text="@string/linkguard_ota_section"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github_pat_hint" />

        <EditText
            android:id="@+id/github_pat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/github_pat_hint_field"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/github_pat_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github_pat_save" />
    </LinearLayout>
</ScrollView>
