<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/domain_route_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/smallPadding" />

    <Button
        android:id="@+id/domain_edit_rules"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_routing_edit" />

    <Button
        android:id="@+id/domain_add_tor"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_routing_add_tor" />

    <Button
        android:id="@+id/domain_add_clearnet"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_routing_add_clearnet" />
</LinearLayout>
