<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context=".activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/smallPadding"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/trianguloy"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/trianguloy" />

        <TextView
            android:id="@+id/txt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallPadding"
            android:gravity="center"
            android:text="@string/txt_about" />

        <Button
            android:id="@+id/btn_about_updates"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/ota_check_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/smallPadding"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/links"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"></LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/smallPadding"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            android:gravity="center"
            android:text="@string/mVT_tm" />

        <TextView
            android:id="@+id/tm_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/mClear_tm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            android:gravity="center"
            android:text="@string/mUnshort_tm" />

        <TextView
            android:id="@+id/tm_hosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallPadding"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/mHosts_tm" />

    </LinearLayout>
</ScrollView>